# SCI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: SCIConfig.cmake.in
sci/: CMakeLists.txt  cleartext_library_fixed.cpp  defines.h  defines_uniform.h  functionalities.h  functionalities_uniform.h  functionalities_wrapper.h  globals.h  library_fixed.cpp  library_fixed.h  library_fixed_uniform.cpp  library_fixed_uniform.h  linear-primary.h
sci/BuildingBlocks/: aux-protocols.cpp  aux-protocols.h  truncation.cpp  truncation.h  value-extension.cpp  value-extension.h
sci/LinearHE/: CMakeLists.txt  conv-field.cpp  conv-field.h  defines-HE.h  elemwise-prod-field.cpp  elemwise-prod-field.h  fc-field.cpp  fc-field.h  utils-HE.cpp  utils-HE.h
sci/LinearOT/: linear-ot.cpp  linear-ot.h  linear-uniform.h
sci/Math/: math-functions.cpp  math-functions.h
sci/Millionaire/: bit-triple-generator.h  equality.h  millionaire.h  millionaire_with_equality.h
sci/NonLinear/: argmax.h  drelu-field.h  maxpool.h  relu-field.h  relu-interface.h  relu-ring.h
sci/OT/: emp-ot.h  ideal.h  iknp.h  kkot.h  np.h  ot-utils.h  ot.h  ot_pack.h  split-iknp.h  split-kkot.h  split-utils.h
sci/utils/: aes-ni.h  aes.h  aes_opt.h  ccrf.h  crh.h  emp-tool.h  group.h  hash.h  io_channel.h  net_io_channel.h  prg.h  prp.h  utils.h  utils.hpp
sci/utils/ArgMapping/: LICENSE
tests/: CMakeLists.txt  test_ring_relu.cpp
